[package]
name = "nw-tex"
description = "A tool to extract and rebuild Paper Mario: Sticker Star's localized texture archives"
authors = ["Darxoon"]
repository = "https://github.com/Darxoon/nw-tex"
homepage = "https://darxoon.neocities.org/p/nw-tex"
license = "Unlicense"
readme = "readme.md"
version = "1.2.0"
edition = "2021"
categories = ["command-line-utilities", "parsing", "data-structures", "game-development"]
keywords = ["paper mario", "reverse engineering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
binrw = "0.13.3"
byteorder = "1.4.3"
clap = { version = "4.3.15", features = ["derive"] }
md5 = { version = "0.7.0" }
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde-binary = "0.5.0"
serde_yaml = "0.9.27"
